@@ -1,5 +1,5 @@
 /*
- * Copyright 2010-2020 Alfresco Software, Ltd.
+ * Copyright 2010-2026 Hyland Software, Inc. and its affiliates.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,16 +17,16 @@ package org.activiti.core.el;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
-import java.util.Collections;
-import java.util.Map;
-import org.junit.Test;
 
-public class ELResolverReflectionBlockerDecoratorTest {
+import java.util.Map;
+import org.junit.jupiter.api.Test;
+
+class ELResolverReflectionBlockerDecoratorTest {
 
     @Test
-    public void should_resolveExpressionCorrectly_when_noReflectionOrNativeMethodsAreUsed() {
+    void should_resolveExpressionCorrectly_when_noReflectionOrNativeMethodsAreUsed() {
         //given
-        Map<String, Object> availableVariables = Collections.singletonMap("name", "jon doe");
+        Map<String, Object> availableVariables = Map.of("name", "jon doe");
         String expressionString = "${name.toString()}";
         ExpressionResolver expressionResolver = new JuelExpressionResolver();
 
@@ -38,10 +38,9 @@ public class ELResolverReflectionBlockerDecoratorTest {
     }
 
     @Test
-    public void should_throwException_when_nativeMethodIsUsed() {
-
+    void should_throwException_when_nativeMethodIsUsed() {
         //given
-        Map<String, Object> availableVariables = Collections.singletonMap("name", "jon doe");
+        Map<String, Object> availableVariables = Map.of("name", "jon doe");
         String expressionString = "${name.getClass().getName()}";
         ExpressionResolver expressionResolver = new JuelExpressionResolver();
 
@@ -53,10 +52,9 @@ public class ELResolverReflectionBlockerDecoratorTest {
     }
 
     @Test
-    public void should_throwException_when_reflectionIsUsed() {
-
+    void should_throwException_when_reflectionIsUsed() {
         //given
-        Map<String, Object> availableVariables = Collections.singletonMap("class", String.class);
+        Map<String, Object> availableVariables = Map.of("class", String.class);
         String expressionString = "${class.forName(\"java.lang.Runtime\").getMethods()[6].invoke()}";
         ExpressionResolver expressionResolver = new JuelExpressionResolver();
 
