@@ -1,5 +1,5 @@
 /*
- * Copyright 2010-2020 Alfresco Software, Ltd.
+ * Copyright 2010-2026 Hyland Software, Inc. and its affiliates.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -13,13 +13,14 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-
 package org.activiti.editor.language.json.converter;
 
+import tools.jackson.databind.JsonNode;
+import tools.jackson.databind.node.ArrayNode;
+import tools.jackson.databind.node.ObjectNode;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
-
 import org.activiti.bpmn.model.BaseElement;
 import org.activiti.bpmn.model.ExtensionElement;
 import org.activiti.bpmn.model.FlowElement;
@@ -27,10 +28,6 @@ import org.activiti.bpmn.model.UserTask;
 import org.activiti.editor.language.json.converter.util.CollectionUtils;
 import org.activiti.editor.language.json.model.ModelInfo;
 import org.apache.commons.lang3.StringUtils;
-
-import com.fasterxml.jackson.databind.JsonNode;
-import com.fasterxml.jackson.databind.node.ArrayNode;
-import com.fasterxml.jackson.databind.node.ObjectNode;
 
 /**
  *
@@ -40,7 +37,10 @@ public class UserTaskJsonConverter extends BaseBpmnJsonConverter implements Form
     protected Map<String, String> formMap;
     protected Map<String, ModelInfo> formKeyMap;
 
-    public static void fillTypes(Map<String, Class<? extends BaseBpmnJsonConverter>> convertersToBpmnMap, Map<Class<? extends BaseElement>, Class<? extends BaseBpmnJsonConverter>> convertersToJsonMap) {
+    public static void fillTypes(
+        Map<String, Class<? extends BaseBpmnJsonConverter>> convertersToBpmnMap,
+        Map<Class<? extends BaseElement>, Class<? extends BaseBpmnJsonConverter>> convertersToJsonMap
+    ) {
         fillJsonTypes(convertersToBpmnMap);
         fillBpmnTypes(convertersToJsonMap);
     }
@@ -49,7 +49,9 @@ public class UserTaskJsonConverter extends BaseBpmnJsonConverter implements Form
         convertersToBpmnMap.put(STENCIL_TASK_USER, UserTaskJsonConverter.class);
     }
 
-    public static void fillBpmnTypes(Map<Class<? extends BaseElement>, Class<? extends BaseBpmnJsonConverter>> convertersToJsonMap) {
+    public static void fillBpmnTypes(
+        Map<Class<? extends BaseElement>, Class<? extends BaseBpmnJsonConverter>> convertersToJsonMap
+    ) {
         convertersToJsonMap.put(UserTask.class, UserTaskJsonConverter.class);
     }
 
@@ -63,35 +65,44 @@ public class UserTaskJsonConverter extends BaseBpmnJsonConverter implements Form
         UserTask userTask = (UserTask) baseElement;
         String assignee = userTask.getAssignee();
 
-        if (StringUtils.isNotEmpty(assignee) || CollectionUtils.isNotEmpty(userTask.getCandidateUsers()) || CollectionUtils.isNotEmpty(userTask.getCandidateGroups())) {
-
-            ObjectNode assignmentNode = objectMapper.createObjectNode();
-            ObjectNode assignmentValuesNode = objectMapper.createObjectNode();
+        if (
+            StringUtils.isNotEmpty(assignee) ||
+            CollectionUtils.isNotEmpty(userTask.getCandidateUsers()) ||
+            CollectionUtils.isNotEmpty(userTask.getCandidateGroups())
+        ) {
+            ObjectNode assignmentNode = jsonMapper.createObjectNode();
+            ObjectNode assignmentValuesNode = jsonMapper.createObjectNode();
 
             List<ExtensionElement> idmAssigneeList = userTask.getExtensionElements().get("activiti-idm-assignee");
-            List<ExtensionElement> idmAssigneeFieldList = userTask.getExtensionElements().get("activiti-idm-assignee-field");
-            if (CollectionUtils.isNotEmpty(idmAssigneeList) || CollectionUtils.isNotEmpty(idmAssigneeFieldList)
-                || CollectionUtils.isNotEmpty(userTask.getExtensionElements().get("activiti-idm-candidate-user"))
-                || CollectionUtils.isNotEmpty(userTask.getExtensionElements().get("activiti-idm-candidate-group"))) {
-
+            List<ExtensionElement> idmAssigneeFieldList = userTask
+                .getExtensionElements()
+                .get("activiti-idm-assignee-field");
+            if (
+                CollectionUtils.isNotEmpty(idmAssigneeList) ||
+                CollectionUtils.isNotEmpty(idmAssigneeFieldList) ||
+                CollectionUtils.isNotEmpty(userTask.getExtensionElements().get("activiti-idm-candidate-user")) ||
+                CollectionUtils.isNotEmpty(userTask.getExtensionElements().get("activiti-idm-candidate-group"))
+            ) {
                 assignmentValuesNode.put("type", "idm");
-                ObjectNode idmNode = objectMapper.createObjectNode();
+                ObjectNode idmNode = jsonMapper.createObjectNode();
                 assignmentValuesNode.set("idm", idmNode);
 
                 List<ExtensionElement> canCompleteList = userTask.getExtensionElements().get("initiator-can-complete");
                 if (CollectionUtils.isNotEmpty(canCompleteList)) {
-                    assignmentValuesNode.put("initiatorCanCompleteTask", Boolean.valueOf(canCompleteList.get(0).getElementText()));
+                    assignmentValuesNode.put(
+                        "initiatorCanCompleteTask",
+                        Boolean.valueOf(canCompleteList.getFirst().getElementText())
+                    );
                 }
 
                 if (StringUtils.isNotEmpty(userTask.getAssignee())) {
-                    ObjectNode assigneeNode = objectMapper.createObjectNode();
+                    ObjectNode assigneeNode = jsonMapper.createObjectNode();
                     if (userTask.getAssignee().contains("${taskAssignmentBean.assignTaskToAssignee(")) {
                         idmNode.set("assigneeField", assigneeNode);
                         idmNode.put("type", "user");
 
                         fillProperty("id", "activiti-idm-assignee-field", assigneeNode, userTask);
                         fillProperty("name", "assignee-field-info-name", assigneeNode, userTask);
-
                     } else {
                         assigneeNode.put("id", userTask.getAssignee());
                         idmNode.set("assignee", assigneeNode);
@@ -104,16 +115,26 @@ public class UserTaskJsonConverter extends BaseBpmnJsonConverter implements Form
                     }
                 }
 
-                List<ExtensionElement> idmCandidateUserList = userTask.getExtensionElements().get("activiti-idm-candidate-user");
-                if (CollectionUtils.isNotEmpty(userTask.getCandidateUsers()) && CollectionUtils.isNotEmpty(idmCandidateUserList)) {
-
+                List<ExtensionElement> idmCandidateUserList = userTask
+                    .getExtensionElements()
+                    .get("activiti-idm-candidate-user");
+                if (
+                    CollectionUtils.isNotEmpty(userTask.getCandidateUsers()) &&
+                    CollectionUtils.isNotEmpty(idmCandidateUserList)
+                ) {
                     List<String> candidateUserIds = new ArrayList<>();
 
-                    if (userTask.getCandidateUsers().size() == 1 && userTask.getCandidateUsers().get(0).contains("${taskAssignmentBean.assignTaskToCandidateUsers(")) {
+                    if (
+                        userTask.getCandidateUsers().size() == 1 &&
+                        userTask.getCandidateUsers().getFirst().contains("${taskAssignmentBean.assignTaskToCandidateUsers(")
+                    ) {
                         idmNode.put("type", "users");
 
-                        String candidateUsersString = userTask.getCandidateUsers().get(0);
-                        candidateUsersString = candidateUsersString.replace("${taskAssignmentBean.assignTaskToCandidateUsers('", "");
+                        String candidateUsersString = userTask.getCandidateUsers().getFirst();
+                        candidateUsersString = candidateUsersString.replace(
+                            "${taskAssignmentBean.assignTaskToCandidateUsers('",
+                            ""
+                        );
                         candidateUsersString = candidateUsersString.replace("', execution)}", "");
 
                         List<String> candidateFieldIds = new ArrayList<>();
@@ -128,48 +149,75 @@ public class UserTaskJsonConverter extends BaseBpmnJsonConverter implements Form
                         }
 
                         if (candidateFieldIds.size() > 0) {
-                            ArrayNode candidateUserFieldsNode = objectMapper.createArrayNode();
+                            ArrayNode candidateUserFieldsNode = jsonMapper.createArrayNode();
                             idmNode.set("candidateUserFields", candidateUserFieldsNode);
                             for (String fieldId : candidateFieldIds) {
-                                ObjectNode fieldNode = objectMapper.createObjectNode();
+                                ObjectNode fieldNode = jsonMapper.createObjectNode();
                                 fieldNode.put("id", fieldId);
                                 candidateUserFieldsNode.add(fieldNode);
 
                                 fillProperty("name", "user-field-info-name-" + fieldId, fieldNode, userTask);
                             }
                         }
-
                     } else {
                         candidateUserIds.addAll(userTask.getCandidateUsers());
                     }
 
                     if (candidateUserIds.size() > 0) {
-                        ArrayNode candidateUsersNode = objectMapper.createArrayNode();
+                        ArrayNode candidateUsersNode = jsonMapper.createArrayNode();
                         idmNode.set("candidateUsers", candidateUsersNode);
                         idmNode.put("type", "users");
                         for (String candidateUser : candidateUserIds) {
-                            ObjectNode candidateUserNode = objectMapper.createObjectNode();
+                            ObjectNode candidateUserNode = jsonMapper.createObjectNode();
                             candidateUserNode.put("id", candidateUser);
                             candidateUsersNode.add(candidateUserNode);
 
-                            fillProperty("externalId", "user-info-externalid-" + candidateUser, candidateUserNode, userTask);
+                            fillProperty(
+                                "externalId",
+                                "user-info-externalid-" + candidateUser,
+                                candidateUserNode,
+                                userTask
+                            );
                             fillProperty("email", "user-info-email-" + candidateUser, candidateUserNode, userTask);
-                            fillProperty("firstName", "user-info-firstname-" + candidateUser, candidateUserNode, userTask);
-                            fillProperty("lastName", "user-info-lastname-" + candidateUser, candidateUserNode, userTask);
+                            fillProperty(
+                                "firstName",
+                                "user-info-firstname-" + candidateUser,
+                                candidateUserNode,
+                                userTask
+                            );
+                            fillProperty(
+                                "lastName",
+                                "user-info-lastname-" + candidateUser,
+                                candidateUserNode,
+                                userTask
+                            );
                         }
                     }
                 }
 
-                List<ExtensionElement> idmCandidateGroupList = userTask.getExtensionElements().get("activiti-idm-candidate-group");
-                if (CollectionUtils.isNotEmpty(userTask.getCandidateGroups()) && CollectionUtils.isNotEmpty(idmCandidateGroupList)) {
-
+                List<ExtensionElement> idmCandidateGroupList = userTask
+                    .getExtensionElements()
+                    .get("activiti-idm-candidate-group");
+                if (
+                    CollectionUtils.isNotEmpty(userTask.getCandidateGroups()) &&
+                    CollectionUtils.isNotEmpty(idmCandidateGroupList)
+                ) {
                     List<String> candidateGroupIds = new ArrayList<>();
 
-                    if (userTask.getCandidateGroups().size() == 1 && userTask.getCandidateGroups().get(0).contains("${taskAssignmentBean.assignTaskToCandidateGroups(")) {
+                    if (
+                        userTask.getCandidateGroups().size() == 1 &&
+                        userTask
+                            .getCandidateGroups()
+                            .getFirst()
+                            .contains("${taskAssignmentBean.assignTaskToCandidateGroups(")
+                    ) {
                         idmNode.put("type", "groups");
 
-                        String candidateGroupsString = userTask.getCandidateGroups().get(0);
-                        candidateGroupsString = candidateGroupsString.replace("${taskAssignmentBean.assignTaskToCandidateGroups('", "");
+                        String candidateGroupsString = userTask.getCandidateGroups().getFirst();
+                        candidateGroupsString = candidateGroupsString.replace(
+                            "${taskAssignmentBean.assignTaskToCandidateGroups('",
+                            ""
+                        );
                         candidateGroupsString = candidateGroupsString.replace("', execution)}", "");
 
                         List<String> candidateFieldIds = new ArrayList<>();
@@ -184,36 +232,39 @@ public class UserTaskJsonConverter extends BaseBpmnJsonConverter implements Form
                         }
 
                         if (candidateFieldIds.size() > 0) {
-                            ArrayNode candidateGroupFieldsNode = objectMapper.createArrayNode();
+                            ArrayNode candidateGroupFieldsNode = jsonMapper.createArrayNode();
                             idmNode.set("candidateGroupFields", candidateGroupFieldsNode);
                             for (String fieldId : candidateFieldIds) {
-                                ObjectNode fieldNode = objectMapper.createObjectNode();
+                                ObjectNode fieldNode = jsonMapper.createObjectNode();
                                 fieldNode.put("id", fieldId);
                                 candidateGroupFieldsNode.add(fieldNode);
 
                                 fillProperty("name", "group-field-info-name-" + fieldId, fieldNode, userTask);
                             }
                         }
-
                     } else {
                         candidateGroupIds.addAll(userTask.getCandidateGroups());
                     }
 
                     if (candidateGroupIds.size() > 0) {
-                        ArrayNode candidateGroupsNode = objectMapper.createArrayNode();
+                        ArrayNode candidateGroupsNode = jsonMapper.createArrayNode();
                         idmNode.set("candidateGroups", candidateGroupsNode);
                         idmNode.put("type", "groups");
                         for (String candidateGroup : candidateGroupIds) {
-                            ObjectNode candidateGroupNode = objectMapper.createObjectNode();
+                            ObjectNode candidateGroupNode = jsonMapper.createObjectNode();
                             candidateGroupNode.put("id", candidateGroup);
                             candidateGroupsNode.add(candidateGroupNode);
 
-                            fillProperty("externalId", "group-info-externalid-" + candidateGroup, candidateGroupNode, userTask);
+                            fillProperty(
+                                "externalId",
+                                "group-info-externalid-" + candidateGroup,
+                                candidateGroupNode,
+                                userTask
+                            );
                             fillProperty("name", "group-info-name-" + candidateGroup, candidateGroupNode, userTask);
                         }
                     }
                 }
-
             } else {
                 assignmentValuesNode.put("type", "static");
 
@@ -222,9 +273,9 @@ public class UserTaskJsonConverter extends BaseBpmnJsonConverter implements Form
                 }
 
                 if (CollectionUtils.isNotEmpty(userTask.getCandidateUsers())) {
-                    ArrayNode candidateArrayNode = objectMapper.createArrayNode();
+                    ArrayNode candidateArrayNode = jsonMapper.createArrayNode();
                     for (String candidateUser : userTask.getCandidateUsers()) {
-                        ObjectNode candidateNode = objectMapper.createObjectNode();
+                        ObjectNode candidateNode = jsonMapper.createObjectNode();
                         candidateNode.put("value", candidateUser);
                         candidateArrayNode.add(candidateNode);
                     }
@@ -232,9 +283,9 @@ public class UserTaskJsonConverter extends BaseBpmnJsonConverter implements Form
                 }
 
                 if (CollectionUtils.isNotEmpty(userTask.getCandidateGroups())) {
-                    ArrayNode candidateArrayNode = objectMapper.createArrayNode();
+                    ArrayNode candidateArrayNode = jsonMapper.createArrayNode();
                     for (String candidateGroup : userTask.getCandidateGroups()) {
-                        ObjectNode candidateNode = objectMapper.createObjectNode();
+                        ObjectNode candidateNode = jsonMapper.createObjectNode();
                         candidateNode.put("value", candidateGroup);
                         candidateArrayNode.add(candidateNode);
                     }
@@ -252,13 +303,12 @@ public class UserTaskJsonConverter extends BaseBpmnJsonConverter implements Form
 
         if (StringUtils.isNotEmpty(userTask.getFormKey())) {
             if (formKeyMap != null && formKeyMap.containsKey(userTask.getFormKey())) {
-                ObjectNode formRefNode = objectMapper.createObjectNode();
+                ObjectNode formRefNode = jsonMapper.createObjectNode();
                 ModelInfo modelInfo = formKeyMap.get(userTask.getFormKey());
                 formRefNode.put("id", modelInfo.getId());
                 formRefNode.put("name", modelInfo.getName());
                 formRefNode.put("key", modelInfo.getKey());
                 propertiesNode.set(PROPERTY_FORM_REFERENCE, formRefNode);
-
             } else {
                 setPropertyValue(PROPERTY_FORMKEY, userTask.getFormKey(), propertiesNode);
             }
@@ -282,14 +332,18 @@ public class UserTaskJsonConverter extends BaseBpmnJsonConverter implements Form
     protected String getExtensionElementValue(String name, UserTask userTask) {
         String value = "";
         if (CollectionUtils.isNotEmpty(userTask.getExtensionElements().get(name))) {
-            ExtensionElement extensionElement = userTask.getExtensionElements().get(name).get(0);
+            ExtensionElement extensionElement = userTask.getExtensionElements().get(name).getFirst();
             value = extensionElement.getElementText();
         }
         return value;
     }
 
     @Override
-    protected FlowElement convertJsonToElement(JsonNode elementNode, JsonNode modelNode, Map<String, JsonNode> shapeMap) {
+    protected FlowElement convertJsonToElement(
+        JsonNode elementNode,
+        JsonNode modelNode,
+        Map<String, JsonNode> shapeMap
+    ) {
         UserTask task = new UserTask();
 
         task.setPriority(getPropertyValueAsString(PROPERTY_USERTASK_PRIORITY, elementNode));
@@ -299,9 +353,8 @@ public class UserTaskJsonConverter extends BaseBpmnJsonConverter implements Form
         } else {
             JsonNode formReferenceNode = getProperty(PROPERTY_FORM_REFERENCE, elementNode);
             if (formReferenceNode != null && formReferenceNode.get("id") != null) {
-
-                if (formMap != null && formMap.containsKey(formReferenceNode.get("id").asText())) {
-                    task.setFormKey(formMap.get(formReferenceNode.get("id").asText()));
+                if (formMap != null && formMap.containsKey(formReferenceNode.get("id").asString())) {
+                    task.setFormKey(formMap.get(formReferenceNode.get("id").asString()));
                 }
             }
         }
@@ -313,46 +366,55 @@ public class UserTaskJsonConverter extends BaseBpmnJsonConverter implements Form
         if (assignmentNode != null) {
             JsonNode assignmentDefNode = assignmentNode.get("assignment");
             if (assignmentDefNode != null) {
-
                 JsonNode typeNode = assignmentDefNode.get("type");
                 JsonNode canCompleteTaskNode = assignmentDefNode.get("initiatorCanCompleteTask");
-                if (typeNode == null || "static".equalsIgnoreCase(typeNode.asText())) {
+                if (typeNode == null || "static".equalsIgnoreCase(typeNode.asString())) {
                     JsonNode assigneeNode = assignmentDefNode.get(PROPERTY_USERTASK_ASSIGNEE);
                     if (assigneeNode != null && !assigneeNode.isNull()) {
-                        task.setAssignee(assigneeNode.asText());
+                        task.setAssignee(assigneeNode.asString());
                     }
 
                     task.setCandidateUsers(getValueAsList(PROPERTY_USERTASK_CANDIDATE_USERS, assignmentDefNode));
                     task.setCandidateGroups(getValueAsList(PROPERTY_USERTASK_CANDIDATE_GROUPS, assignmentDefNode));
 
-                    if (StringUtils.isNotEmpty(task.getAssignee()) && !"$INITIATOR".equalsIgnoreCase(task.getAssignee())) {
-
+                    if (
+                        StringUtils.isNotEmpty(task.getAssignee()) && !"$INITIATOR".equalsIgnoreCase(task.getAssignee())
+                    ) {
                         if (canCompleteTaskNode != null && !canCompleteTaskNode.isNull()) {
-                            addInitiatorCanCompleteExtensionElement(Boolean.parseBoolean(canCompleteTaskNode.asText()), task);
+                            addInitiatorCanCompleteExtensionElement(
+                                Boolean.parseBoolean(canCompleteTaskNode.asString()),
+                                task
+                            );
                         } else {
                             addInitiatorCanCompleteExtensionElement(false, task);
                         }
-
-                    } else if (StringUtils.isNotEmpty(task.getAssignee()) && "$INITIATOR".equalsIgnoreCase(task.getAssignee())) {
+                    } else if (
+                        StringUtils.isNotEmpty(task.getAssignee()) && "$INITIATOR".equalsIgnoreCase(task.getAssignee())
+                    ) {
                         addInitiatorCanCompleteExtensionElement(true, task);
                     }
-
-                } else if ("idm".equalsIgnoreCase(typeNode.asText())) {
+                } else if ("idm".equalsIgnoreCase(typeNode.asString())) {
                     JsonNode idmDefNode = assignmentDefNode.get("idm");
                     if (idmDefNode != null && idmDefNode.has("type")) {
                         JsonNode idmTypeNode = idmDefNode.get("type");
-                        if (idmTypeNode != null && "user".equalsIgnoreCase(idmTypeNode.asText()) && (idmDefNode.has("assignee") || idmDefNode.has("assigneeField"))) {
-
+                        if (
+                            idmTypeNode != null &&
+                            "user".equalsIgnoreCase(idmTypeNode.asString()) &&
+                            (idmDefNode.has("assignee") || idmDefNode.has("assigneeField"))
+                        ) {
                             fillAssigneeInfo(idmDefNode, canCompleteTaskNode, task);
-
-                        } else if (idmTypeNode != null && "users".equalsIgnoreCase(idmTypeNode.asText()) && (idmDefNode.has("candidateUsers") || idmDefNode.has("candidateUserFields"))) {
-
+                        } else if (
+                            idmTypeNode != null &&
+                            "users".equalsIgnoreCase(idmTypeNode.asString()) &&
+                            (idmDefNode.has("candidateUsers") || idmDefNode.has("candidateUserFields"))
+                        ) {
                             fillCandidateUsers(idmDefNode, canCompleteTaskNode, task);
-
-                        } else if (idmTypeNode != null && "groups".equalsIgnoreCase(idmTypeNode.asText()) && (idmDefNode.has("candidateGroups") || idmDefNode.has("candidateGroupFields"))) {
-
+                        } else if (
+                            idmTypeNode != null &&
+                            "groups".equalsIgnoreCase(idmTypeNode.asString()) &&
+                            (idmDefNode.has("candidateGroups") || idmDefNode.has("candidateGroupFields"))
+                        ) {
                             fillCandidateGroups(idmDefNode, canCompleteTaskNode, task);
-
                         } else {
                             task.setAssignee("$INITIATOR");
                             addExtensionElement("activiti-idm-initiator", String.valueOf(true), task);
@@ -372,34 +434,32 @@ public class UserTaskJsonConverter extends BaseBpmnJsonConverter implements Form
         if (assigneeNode != null && !assigneeNode.isNull()) {
             JsonNode idNode = assigneeNode.get("id");
             JsonNode emailNode = assigneeNode.get("email");
-            if (idNode != null && !idNode.isNull() && StringUtils.isNotEmpty(idNode.asText())) {
-                task.setAssignee(idNode.asText());
+            if (idNode != null && !idNode.isNull() && StringUtils.isNotEmpty(idNode.asString())) {
+                task.setAssignee(idNode.asString());
                 addExtensionElement("activiti-idm-assignee", String.valueOf(true), task);
                 addExtensionElement("assignee-info-email", emailNode, task);
                 addExtensionElement("assignee-info-firstname", assigneeNode.get("firstName"), task);
                 addExtensionElement("assignee-info-lastname", assigneeNode.get("lastName"), task);
                 addExtensionElement("assignee-info-externalid", assigneeNode.get("externalId"), task);
-
-            } else if (emailNode != null && !emailNode.isNull() && StringUtils.isNotEmpty(emailNode.asText())) {
-                task.setAssignee(emailNode.asText());
+            } else if (emailNode != null && !emailNode.isNull() && StringUtils.isNotEmpty(emailNode.asString())) {
+                task.setAssignee(emailNode.asString());
 
                 // The email is added as extension element. Later (eg on deploy) the assignee
                 // is replaced by a real user id, but the email information kept in this extension element
                 addExtensionElement("activiti-assignee-email", task.getAssignee(), task);
                 addExtensionElement("activiti-idm-assignee", String.valueOf(true), task);
             }
-
         } else if (assigneeFieldNode != null && !assigneeFieldNode.isNull()) {
             JsonNode idNode = assigneeFieldNode.get("id");
-            if (idNode != null && !idNode.isNull() && StringUtils.isNotEmpty(idNode.asText())) {
-                task.setAssignee("${taskAssignmentBean.assignTaskToAssignee('" + idNode.asText() + "', execution)}");
-                addExtensionElement("activiti-idm-assignee-field", idNode.asText(), task);
+            if (idNode != null && !idNode.isNull() && StringUtils.isNotEmpty(idNode.asString())) {
+                task.setAssignee("${taskAssignmentBean.assignTaskToAssignee('" + idNode.asString() + "', execution)}");
+                addExtensionElement("activiti-idm-assignee-field", idNode.asString(), task);
                 addExtensionElement("assignee-field-info-name", assigneeFieldNode.get("name"), task);
             }
         }
 
         if (canCompleteTaskNode != null && !canCompleteTaskNode.isNull()) {
-            addInitiatorCanCompleteExtensionElement(Boolean.parseBoolean(canCompleteTaskNode.asText()), task);
+            addInitiatorCanCompleteExtensionElement(Boolean.parseBoolean(canCompleteTaskNode.asString()), task);
         } else {
             addInitiatorCanCompleteExtensionElement(false, task);
         }
@@ -414,17 +474,16 @@ public class UserTaskJsonConverter extends BaseBpmnJsonConverter implements Form
                 if (userNode != null && !userNode.isNull()) {
                     JsonNode idNode = userNode.get("id");
                     JsonNode emailNode = userNode.get("email");
-                    if (idNode != null && !idNode.isNull() && StringUtils.isNotEmpty(idNode.asText())) {
-                        String id = idNode.asText();
+                    if (idNode != null && !idNode.isNull() && StringUtils.isNotEmpty(idNode.asString())) {
+                        String id = idNode.asString();
                         candidateUsers.add(id);
 
                         addExtensionElement("user-info-email-" + id, emailNode, task);
                         addExtensionElement("user-info-firstname-" + id, userNode.get("firstName"), task);
                         addExtensionElement("user-info-lastname-" + id, userNode.get("lastName"), task);
                         addExtensionElement("user-info-externalid-" + id, userNode.get("externalId"), task);
-
-                    } else if (emailNode != null && !emailNode.isNull() && StringUtils.isNotEmpty(emailNode.asText())) {
-                        String email = emailNode.asText();
+                    } else if (emailNode != null && !emailNode.isNull() && StringUtils.isNotEmpty(emailNode.asString())) {
+                        String email = emailNode.asString();
                         candidateUsers.add(email);
                         emails.add(email);
                     }
@@ -439,7 +498,7 @@ public class UserTaskJsonConverter extends BaseBpmnJsonConverter implements Form
             if (candidateUsers.size() > 0) {
                 addExtensionElement("activiti-idm-candidate-user", String.valueOf(true), task);
                 if (canCompleteTaskNode != null && !canCompleteTaskNode.isNull()) {
-                    addInitiatorCanCompleteExtensionElement(Boolean.parseBoolean(canCompleteTaskNode.asText()), task);
+                    addInitiatorCanCompleteExtensionElement(Boolean.parseBoolean(canCompleteTaskNode.asString()), task);
                 } else {
                     addInitiatorCanCompleteExtensionElement(false, task);
                 }
@@ -450,8 +509,8 @@ public class UserTaskJsonConverter extends BaseBpmnJsonConverter implements Form
         if (candidateUserFieldsNode != null && candidateUserFieldsNode.isArray()) {
             for (JsonNode fieldNode : candidateUserFieldsNode) {
                 JsonNode idNode = fieldNode.get("id");
-                if (idNode != null && !idNode.isNull() && StringUtils.isNotEmpty(idNode.asText())) {
-                    String id = idNode.asText();
+                if (idNode != null && !idNode.isNull() && StringUtils.isNotEmpty(idNode.asString())) {
+                    String id = idNode.asString();
                     candidateUsers.add("field(" + id + ")");
 
                     addExtensionElement("user-field-info-name-" + id, fieldNode.get("name"), task);
@@ -460,13 +519,17 @@ public class UserTaskJsonConverter extends BaseBpmnJsonConverter implements Form
         }
 
         if (candidateUsers.size() > 0) {
-            if (candidateUserFieldsNode != null && candidateUserFieldsNode.isArray() && candidateUserFieldsNode.size() > 0) {
+            if (
+                candidateUserFieldsNode != null &&
+                candidateUserFieldsNode.isArray() &&
+                candidateUserFieldsNode.size() > 0
+            ) {
                 String candidateUsersString = StringUtils.join(candidateUsers, ",");
-                candidateUsersString = "${taskAssignmentBean.assignTaskToCandidateUsers('" + candidateUsersString + "', execution)}";
+                candidateUsersString =
+                    "${taskAssignmentBean.assignTaskToCandidateUsers('" + candidateUsersString + "', execution)}";
                 candidateUsers.clear();
                 candidateUsers.add(candidateUsersString);
                 task.setCandidateUsers(candidateUsers);
-
             } else {
                 task.setCandidateUsers(candidateUsers);
             }
@@ -481,8 +544,8 @@ public class UserTaskJsonConverter extends BaseBpmnJsonConverter implements Form
                 if (groupNode != null && !groupNode.isNull()) {
                     JsonNode idNode = groupNode.get("id");
                     JsonNode nameNode = groupNode.get("name");
-                    if (idNode != null && !idNode.isNull() && StringUtils.isNotEmpty(idNode.asText())) {
-                        String id = idNode.asText();
+                    if (idNode != null && !idNode.isNull() && StringUtils.isNotEmpty(idNode.asString())) {
+                        String id = idNode.asString();
                         candidateGroups.add(id);
 
                         addExtensionElement("group-info-name-" + id, nameNode, task);
@@ -496,8 +559,8 @@ public class UserTaskJsonConverter extends BaseBpmnJsonConverter implements Form
         if (candidateGroupFieldsNode != null && candidateGroupFieldsNode.isArray()) {
             for (JsonNode fieldNode : candidateGroupFieldsNode) {
                 JsonNode idNode = fieldNode.get("id");
-                if (idNode != null && !idNode.isNull() && StringUtils.isNotEmpty(idNode.asText())) {
-                    String id = idNode.asText();
+                if (idNode != null && !idNode.isNull() && StringUtils.isNotEmpty(idNode.asString())) {
+                    String id = idNode.asString();
                     candidateGroups.add("field(" + id + ")");
 
                     addExtensionElement("group-field-info-name-" + id, fieldNode.get("name"), task);
@@ -506,20 +569,24 @@ public class UserTaskJsonConverter extends BaseBpmnJsonConverter implements Form
         }
 
         if (candidateGroups.size() > 0) {
-            if (candidateGroupFieldsNode != null && candidateGroupFieldsNode.isArray() && candidateGroupFieldsNode.size() > 0) {
+            if (
+                candidateGroupFieldsNode != null &&
+                candidateGroupFieldsNode.isArray() &&
+                candidateGroupFieldsNode.size() > 0
+            ) {
                 String candidateGroupsString = StringUtils.join(candidateGroups, ",");
-                candidateGroupsString = "${taskAssignmentBean.assignTaskToCandidateGroups('" + candidateGroupsString + "', execution)}";
+                candidateGroupsString =
+                    "${taskAssignmentBean.assignTaskToCandidateGroups('" + candidateGroupsString + "', execution)}";
                 candidateGroups.clear();
                 candidateGroups.add(candidateGroupsString);
                 task.setCandidateGroups(candidateGroups);
-
             } else {
                 task.setCandidateGroups(candidateGroups);
             }
 
             addExtensionElement("activiti-idm-candidate-group", String.valueOf(true), task);
             if (canCompleteTaskNode != null && !canCompleteTaskNode.isNull()) {
-                addInitiatorCanCompleteExtensionElement(Boolean.parseBoolean(canCompleteTaskNode.asText()), task);
+                addInitiatorCanCompleteExtensionElement(Boolean.parseBoolean(canCompleteTaskNode.asString()), task);
             } else {
                 addInitiatorCanCompleteExtensionElement(false, task);
             }
@@ -531,8 +598,8 @@ public class UserTaskJsonConverter extends BaseBpmnJsonConverter implements Form
     }
 
     protected void addExtensionElement(String name, JsonNode elementNode, UserTask task) {
-        if (elementNode != null && !elementNode.isNull() && StringUtils.isNotEmpty(elementNode.asText())) {
-            addExtensionElement(name, elementNode.asText(), task);
+        if (elementNode != null && !elementNode.isNull() && StringUtils.isNotEmpty(elementNode.asString())) {
+            addExtensionElement(name, elementNode.asString(), task);
         }
     }
 
@@ -545,10 +612,15 @@ public class UserTaskJsonConverter extends BaseBpmnJsonConverter implements Form
         task.addExtensionElement(extensionElement);
     }
 
-    protected void fillProperty(String propertyName, String extensionElementName, ObjectNode elementNode, UserTask task) {
+    protected void fillProperty(
+        String propertyName,
+        String extensionElementName,
+        ObjectNode elementNode,
+        UserTask task
+    ) {
         List<ExtensionElement> extensionElementList = task.getExtensionElements().get(extensionElementName);
         if (CollectionUtils.isNotEmpty(extensionElementList)) {
-            elementNode.put(propertyName, extensionElementList.get(0).getElementText());
+            elementNode.put(propertyName, extensionElementList.getFirst().getElementText());
         }
     }
 
