@@ -1,5 +1,5 @@
 /*
- * Copyright 2010-2020 Alfresco Software, Ltd.
+ * Copyright 2010-2026 Hyland Software, Inc. and its affiliates.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -13,14 +13,13 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-
 package org.activiti.validation.validator.impl;
 
 import java.util.List;
-
 import org.activiti.bpmn.model.BpmnModel;
 import org.activiti.bpmn.model.EventDefinition;
 import org.activiti.bpmn.model.IntermediateCatchEvent;
+import org.activiti.bpmn.model.LinkEventDefinition;
 import org.activiti.bpmn.model.MessageEventDefinition;
 import org.activiti.bpmn.model.Process;
 import org.activiti.bpmn.model.SignalEventDefinition;
@@ -34,23 +33,34 @@ import org.activiti.validation.validator.ProcessLevelValidator;
  */
 public class IntermediateCatchEventValidator extends ProcessLevelValidator {
 
-  @Override
-  protected void executeValidation(BpmnModel bpmnModel, Process process, List<ValidationError> errors) {
-    List<IntermediateCatchEvent> intermediateCatchEvents = process.findFlowElementsOfType(IntermediateCatchEvent.class);
-    for (IntermediateCatchEvent intermediateCatchEvent : intermediateCatchEvents) {
-      EventDefinition eventDefinition = null;
-      if (!intermediateCatchEvent.getEventDefinitions().isEmpty()) {
-        eventDefinition = intermediateCatchEvent.getEventDefinitions().get(0);
-      }
+    @Override
+    protected void executeValidation(BpmnModel bpmnModel, Process process, List<ValidationError> errors) {
+        List<IntermediateCatchEvent> intermediateCatchEvents = process.findFlowElementsOfType(
+            IntermediateCatchEvent.class
+        );
+        for (IntermediateCatchEvent intermediateCatchEvent : intermediateCatchEvents) {
+            EventDefinition eventDefinition = null;
+            if (!intermediateCatchEvent.getEventDefinitions().isEmpty()) {
+                eventDefinition = intermediateCatchEvent.getEventDefinitions().getFirst();
+            }
 
-      if (eventDefinition == null) {
-        addError(errors, Problems.INTERMEDIATE_CATCH_EVENT_NO_EVENTDEFINITION, process, intermediateCatchEvent, "No event definition for intermediate catch event ");
-      } else {
-        if (!(eventDefinition instanceof TimerEventDefinition) && !(eventDefinition instanceof SignalEventDefinition) && !(eventDefinition instanceof MessageEventDefinition)) {
-          addError(errors, Problems.INTERMEDIATE_CATCH_EVENT_INVALID_EVENTDEFINITION, process, intermediateCatchEvent, "Unsupported intermediate catch event type");
+            if (eventDefinition == null) {
+                addError(errors, Problems.INTERMEDIATE_CATCH_EVENT_NO_EVENTDEFINITION, process, intermediateCatchEvent);
+            } else {
+                if (
+                    !(eventDefinition instanceof TimerEventDefinition) &&
+                    !(eventDefinition instanceof SignalEventDefinition) &&
+                    !(eventDefinition instanceof MessageEventDefinition) &&
+                    !(eventDefinition instanceof LinkEventDefinition)
+                ) {
+                    addError(
+                        errors,
+                        Problems.INTERMEDIATE_CATCH_EVENT_INVALID_EVENTDEFINITION,
+                        process,
+                        intermediateCatchEvent
+                    );
+                }
+            }
         }
-      }
     }
-  }
-
 }
