@@ -1,5 +1,5 @@
 /*
- * Copyright 2010-2020 Alfresco Software, Ltd.
+ * Copyright 2010-2026 Hyland Software, Inc. and its affiliates.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -15,8 +15,9 @@
  */
 package org.activiti.spring.boot.process;
 
-import java.util.List;
+import static org.assertj.core.api.Assertions.assertThat;
 
+import java.util.List;
 import org.activiti.api.process.model.ProcessInstance;
 import org.activiti.api.process.model.builders.ProcessPayloadBuilder;
 import org.activiti.api.process.runtime.ProcessRuntime;
@@ -31,13 +32,12 @@ import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 
-import static org.assertj.core.api.Assertions.assertThat;
-
 @SpringBootTest(webEnvironment = SpringBootTest.WebEnvironment.NONE)
 public class ProcessRuntimeCallActivityIT {
 
     private static final String PARENT_PROCESS_CALL_ACTIVITY = "parentproc-843144bc-3797-40db-8edc-d23190b118e3";
     private static final String SUB_PROCESS_CALL_ACTIVITY = "subprocess-fb5f2386-709a-4947-9aa0-bbf31497384f";
+    private static final String MAIN_PROCESS_CALL_ACTIVITY = "mainProcess-843144bc-3797-40db-8edc-d23190b1183h";
 
     @Autowired
     private ProcessRuntime processRuntime;
@@ -57,52 +57,75 @@ public class ProcessRuntimeCallActivityIT {
     }
 
     @Test
-    public void testCheckSubProcessTaskWhenCallActivity (){
-
+    public void testCheckSubProcessTaskWhenCallActivity() {
         securityUtil.logInAs("user");
 
-        // After the process has started, the subProcess task should be active
-        ProcessInstance processInstance = processRuntime.start(
-                ProcessPayloadBuilder
-                        .start()
-                        .withProcessDefinitionKey(PARENT_PROCESS_CALL_ACTIVITY)
-                        .build());
+        ProcessInstance processInstance = startProcess(PARENT_PROCESS_CALL_ACTIVITY);
 
-        assertThat(processInstance).isNotNull();
-
-        //verify the existence of the sub process itself
-        List<ProcessInstance> subProcessInstanceList = processRuntime.processInstances(
-                Pageable.of(0, 50),
-                ProcessPayloadBuilder
-                        .processInstances()
-                        .withParentProcessInstanceId(processInstance.getId())
-                        .build())
-                .getContent();
-
-        assertThat(subProcessInstanceList).isNotEmpty();
-
-        ProcessInstance subProcessInstance = subProcessInstanceList.get(0);
+        ProcessInstance subProcessInstance = getFirstChildProcessInstance(processInstance);
 
         assertThat(subProcessInstance).isNotNull();
         assertThat(subProcessInstance.getParentId()).isEqualTo(processInstance.getId());
         assertThat(subProcessInstance.getProcessDefinitionKey()).isEqualTo(SUB_PROCESS_CALL_ACTIVITY);
 
-        //verify the existence of the task in the sub process
-        List <Task> taskList = taskRuntime.tasks(
+        List<Task> taskList = taskRuntime
+            .tasks(
                 Pageable.of(0, 50),
-                TaskPayloadBuilder
-                        .tasks()
-                        .withProcessInstanceId(subProcessInstance.getId())
-                        .build())
-                .getContent();
+                TaskPayloadBuilder.tasks().withProcessInstanceId(subProcessInstance.getId()).build()
+            )
+            .getContent();
 
         assertThat(taskList).isNotEmpty();
 
-        Task task = taskList.get(0);
+        Task task = taskList.getFirst();
 
         assertThat(task).isNotNull();
         assertThat("my-task-call-activity").isEqualTo(task.getName());
-
     }
 
+    @Test
+    public void testCheckRootProcessInstanceIdWhenCallActivity() {
+        securityUtil.logInAs("user");
+
+        ProcessInstance rootProcessInstance = startProcess(MAIN_PROCESS_CALL_ACTIVITY);
+
+        assertThat(rootProcessInstance).isNotNull();
+
+        ProcessInstance parentProcessInstance = getFirstChildProcessInstance(rootProcessInstance);
+
+        assertThat(parentProcessInstance).isNotNull();
+        assertThat(parentProcessInstance.getParentId()).isEqualTo(rootProcessInstance.getId());
+        assertThat(parentProcessInstance.getProcessDefinitionKey()).isEqualTo(PARENT_PROCESS_CALL_ACTIVITY);
+        assertThat(parentProcessInstance.getRootProcessInstanceId()).isEqualTo(rootProcessInstance.getId());
+
+        ProcessInstance subProcessInstance = getFirstChildProcessInstance(parentProcessInstance);
+
+        assertThat(subProcessInstance.getProcessDefinitionKey()).isEqualTo(SUB_PROCESS_CALL_ACTIVITY);
+        assertThat(subProcessInstance.getRootProcessInstanceId()).isEqualTo(rootProcessInstance.getId());
+    }
+
+    private ProcessInstance getFirstChildProcessInstance(ProcessInstance rootProcessInstance) {
+        List<ProcessInstance> parentProcessInstanceList = getChildProcessInstances(rootProcessInstance);
+
+        assertThat(parentProcessInstanceList).isNotEmpty();
+
+        ProcessInstance parentProcessInstance = parentProcessInstanceList.getFirst();
+
+        return parentProcessInstance;
+    }
+
+    private ProcessInstance startProcess(String processDefinitionKey) {
+        return processRuntime.start(
+            ProcessPayloadBuilder.start().withProcessDefinitionKey(processDefinitionKey).build()
+        );
+    }
+
+    private List<ProcessInstance> getChildProcessInstances(ProcessInstance processInstance) {
+        return processRuntime
+            .processInstances(
+                Pageable.of(0, 50),
+                ProcessPayloadBuilder.processInstances().withParentProcessInstanceId(processInstance.getId()).build()
+            )
+            .getContent();
+    }
 }
