@@ -1,5 +1,5 @@
 /*
- * Copyright 2010-2020 Alfresco Software, Ltd.
+ * Copyright 2010-2026 Hyland Software, Inc. and its affiliates.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -21,6 +21,7 @@ import static org.assertj.core.api.Assertions.catchThrowable;
 import static org.assertj.core.groups.Tuple.tuple;
 import static org.mockito.Mockito.spy;
 import static org.mockito.Mockito.verify;
+
 import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
@@ -28,11 +29,12 @@ import java.util.List;
 import java.util.Objects;
 import java.util.stream.Collectors;
 import org.activiti.api.model.shared.model.VariableInstance;
-import org.activiti.api.runtime.shared.security.SecurityManager;
 import org.activiti.api.process.model.Deployment;
 import org.activiti.api.process.model.ProcessDefinition;
 import org.activiti.api.process.model.ProcessInstance;
+import org.activiti.api.process.model.builders.GetProcessDefinitionsPayloadBuilder;
 import org.activiti.api.process.model.builders.ProcessPayloadBuilder;
+import org.activiti.api.process.model.payloads.GetProcessDefinitionsPayload;
 import org.activiti.api.process.model.payloads.SignalPayload;
 import org.activiti.api.process.model.payloads.StartProcessPayload;
 import org.activiti.api.process.model.payloads.UpdateProcessPayload;
@@ -41,6 +43,7 @@ import org.activiti.api.process.runtime.ProcessRuntime;
 import org.activiti.api.process.runtime.conf.ProcessRuntimeConfiguration;
 import org.activiti.api.runtime.shared.query.Page;
 import org.activiti.api.runtime.shared.query.Pageable;
+import org.activiti.api.runtime.shared.security.SecurityManager;
 import org.activiti.api.task.model.Task;
 import org.activiti.api.task.model.builders.TaskPayloadBuilder;
 import org.activiti.api.task.runtime.TaskRuntime;
@@ -50,6 +53,7 @@ import org.activiti.engine.ActivitiIllegalArgumentException;
 import org.activiti.engine.RepositoryService;
 import org.activiti.engine.RuntimeService;
 import org.activiti.engine.TaskService;
+import org.activiti.engine.task.TaskQuery;
 import org.activiti.runtime.api.impl.ProcessAdminRuntimeImpl;
 import org.activiti.runtime.api.impl.ProcessRuntimeImpl;
 import org.activiti.runtime.api.impl.ProcessVariablesPayloadValidator;
@@ -76,12 +80,14 @@ public class ProcessRuntimeIT {
     private static final String SINGLE_TASK_PROCESS = "SingleTaskProcess";
     private static final String ONE_STEP_PROCESS = "OneStepProcess";
 
+    private static final String LINK_PROCESS = "linkProcess";
+    private static final String LINK_PROCESS_WITH_GATEWAY = "Process_frjVEXg6";
     private static final String SUB_PROCESS = "subProcess";
     private static final String SUPER_PROCESS = "superProcess";
     private static final String TWO_TASKS_PROCESS = "twoTaskProcess";
-    private static final Pageable PAGEABLE = Pageable.of(0,
-        50);
+    private static final Pageable PAGEABLE = Pageable.of(0, 200);
     public static final String CATEGORIZE_HUMAN_PROCESS_CATEGORY = "test-category";
+    public static final String UNSTARTABLE_PROCESS = "UnstartableProcess";
 
     @Autowired
     private ProcessRuntime processRuntime;
@@ -141,7 +147,7 @@ public class ProcessRuntimeIT {
     private SecurityManager securityManager;
 
     @AfterEach
-    public void cleanUp(){
+    public void cleanUp() {
         processCleanUpUtil.cleanUpWithAdmin();
     }
 
@@ -150,26 +156,34 @@ public class ProcessRuntimeIT {
         securityUtil.logInAs("user");
         eventPublisher = spy(applicationEventPublisher);
 
-        processRuntimeMock = spy(new ProcessRuntimeImpl(repositoryService,
-                                                     processDefinitionConverter,
-                                                     runtimeService,
-                                                     taskService,
-                                                     securityPoliciesManager,
-                                                     processInstanceConverter,
-                                                     variableInstanceConverter,
-                                                     deploymentConverter,
-                                                     configuration,
-                                                     eventPublisher,
-                                                     processVariablesValidator,
-                                                     securityManager));
+        processRuntimeMock = spy(
+            new ProcessRuntimeImpl(
+                repositoryService,
+                processDefinitionConverter,
+                runtimeService,
+                taskService,
+                securityPoliciesManager,
+                processInstanceConverter,
+                variableInstanceConverter,
+                deploymentConverter,
+                configuration,
+                eventPublisher,
+                processVariablesValidator,
+                securityManager
+            )
+        );
 
-        processAdminRuntimeMock = spy(new ProcessAdminRuntimeImpl(repositoryService,
-                                                     processDefinitionConverter,
-                                                     runtimeService,
-                                                     processInstanceConverter,
-                                                     variableInstanceConverter,
-                                                     eventPublisher,
-                                                     processVariablesValidator));
+        processAdminRuntimeMock = spy(
+            new ProcessAdminRuntimeImpl(
+                repositoryService,
+                processDefinitionConverter,
+                runtimeService,
+                processInstanceConverter,
+                variableInstanceConverter,
+                eventPublisher,
+                processVariablesValidator
+            )
+        );
 
         //Reset test variables
         RuntimeTestConfiguration.processImageConnectorExecuted = false;
@@ -189,74 +203,73 @@ public class ProcessRuntimeIT {
     @Test
     public void shouldGetAvailableProcessDefinitionForTheGivenUser() {
         //when
-        Page<ProcessDefinition> processDefinitionPage = processRuntime.processDefinitions(
-            PAGEABLE);
+        Page<ProcessDefinition> processDefinitionPage = processRuntime.processDefinitions(PAGEABLE);
         //then
         assertThat(processDefinitionPage.getContent()).isNotNull();
         assertThat(processDefinitionPage.getContent())
-                .extracting(ProcessDefinition::getKey)
-                .contains(CATEGORIZE_PROCESS,
-                        CATEGORIZE_HUMAN_PROCESS,
-                        ONE_STEP_PROCESS);
+            .extracting(ProcessDefinition::getKey)
+            .contains(CATEGORIZE_PROCESS, CATEGORIZE_HUMAN_PROCESS, ONE_STEP_PROCESS);
     }
 
     @Test
     public void should_allProcessDefinitionsHaveCategoriesSet_when_fetchingProcessDefinitions() {
         //when
-        List<ProcessDefinition> processDefinitionList = processRuntime.processDefinitions(PAGEABLE)
-            .getContent();
+        List<ProcessDefinition> processDefinitionList = processRuntime.processDefinitions(PAGEABLE).getContent();
 
         //then
         assertThat(processDefinitionList)
             .extracting(ProcessDefinition::getCategory)
             .contains(CATEGORIZE_HUMAN_PROCESS_CATEGORY)
             .allMatch(Objects::nonNull);
-
     }
 
     @Test
     public void shouldGetAvailableLatestDeployments() {
+        //when
+        List<org.activiti.engine.repository.Deployment> deployments = repositoryService
+            .createDeploymentQuery()
+            .latestVersion()
+            .list();
+        //then
+        assertThat(deployments)
+            .hasSize(2)
+            .extracting("name", "version", "projectReleaseVersion")
+            .contains(tuple("SpringAutoDeployment", 1, "1"), tuple("ApplicationAutoDeployment", 1, null));
 
         //when
-        List<org.activiti.engine.repository.Deployment> deployments = repositoryService.createDeploymentQuery()
-                                                                                       .latestVersion()
-                                                                                       .list();
+        org.activiti.engine.repository.Deployment applicationAutoDeployment = repositoryService
+            .createDeploymentQuery()
+            .deploymentName("ApplicationAutoDeployment")
+            .latestVersion()
+            .singleResult();
         //then
-        assertThat(deployments).hasSize(2)
-                               .extracting("name", "version", "projectReleaseVersion")
-                               .contains(tuple("SpringAutoDeployment", 1, "1"),
-                                         tuple("ApplicationAutoDeployment", 1, null));
+        assertThat(applicationAutoDeployment)
+            .isNotNull()
+            .extracting("name", "version", "projectReleaseVersion")
+            .contains("ApplicationAutoDeployment", 1, null);
 
         //when
-        org.activiti.engine.repository.Deployment applicationAutoDeployment = repositoryService.createDeploymentQuery()
-                                                                                     .deploymentName("ApplicationAutoDeployment")
-                                                                                     .latestVersion()
-                                                                                     .singleResult();
+        org.activiti.engine.repository.Deployment springAutoDeployment = repositoryService
+            .createDeploymentQuery()
+            .deploymentName("SpringAutoDeployment")
+            .latestVersion()
+            .singleResult();
         //then
-        assertThat(applicationAutoDeployment).isNotNull()
-                                             .extracting("name", "version", "projectReleaseVersion")
-                                             .contains("ApplicationAutoDeployment", 1, null);
-
-        //when
-        org.activiti.engine.repository.Deployment springAutoDeployment = repositoryService.createDeploymentQuery()
-                                                                                     .deploymentName("SpringAutoDeployment")
-                                                                                     .latestVersion()
-                                                                                     .singleResult();
-        //then
-        assertThat(springAutoDeployment).isNotNull()
-                                        .extracting("name", "version", "projectReleaseVersion")
-                                        .contains("SpringAutoDeployment", 1, "1");
-
+        assertThat(springAutoDeployment)
+            .isNotNull()
+            .extracting("name", "version", "projectReleaseVersion")
+            .contains("SpringAutoDeployment", 1, "1");
     }
 
     @Test
     public void createProcessInstanceAndValidateHappyPath() {
         //when
-        ProcessInstance categorizeProcess = processRuntime.start(ProcessPayloadBuilder.start()
+        ProcessInstance categorizeProcess = processRuntime.start(
+            ProcessPayloadBuilder.start()
                 .withProcessDefinitionKey(CATEGORIZE_PROCESS)
-                .withVariable("expectedKey",
-                        true)
-                .build());
+                .withVariable("expectedKey", true)
+                .build()
+        );
 
         assertThat(RuntimeTestConfiguration.completedProcesses).contains(categorizeProcess.getId());
         //then
@@ -269,12 +282,71 @@ public class ProcessRuntimeIT {
     }
 
     @Test
+    public void createLinkEventProcessInstanceAndValidateHappyPath() {
+        //when
+        ProcessInstance linkProcess = processRuntime.start(
+            ProcessPayloadBuilder.start().withProcessDefinitionKey(LINK_PROCESS).build()
+        );
+
+        //then
+        assertThat(RuntimeTestConfiguration.completedProcesses).contains(linkProcess.getId());
+        assertThat(RuntimeTestConfiguration.completedBpmnActivities)
+            .extracting(
+                org.activiti.api.process.model.BPMNActivity::getActivityName,
+                org.activiti.api.process.model.BPMNActivity::getActivityType,
+                org.activiti.api.process.model.BPMNActivity::getProcessInstanceId
+            )
+            .contains(
+                tuple("a", "throwEvent", linkProcess.getId()),
+                tuple("a", "intermediateCatchEvent", linkProcess.getId())
+            );
+    }
+
+    @Test
+    public void createLinkEventProcessInstanceWithInclusiveGatewayAndValidateHappyPath() {
+        //when
+        ProcessInstance linkProcess = processRuntime.start(
+            ProcessPayloadBuilder.start().withProcessDefinitionKey(LINK_PROCESS_WITH_GATEWAY).build()
+        );
+
+        TaskQuery query = taskService.createTaskQuery().orderByTaskName().asc();
+        var tasks = query.list();
+        assertThat(tasks).extracting(org.activiti.engine.task.Task::getName).containsExactly("task 1", "task 2");
+
+        taskService.complete(tasks.get(1).getId());
+
+        tasks = query.list();
+        assertThat(tasks).extracting(org.activiti.engine.task.Task::getName).containsExactly("task 1");
+
+        taskService.complete(tasks.getFirst().getId());
+
+        tasks = query.list();
+        assertThat(tasks).extracting(org.activiti.engine.task.Task::getName).containsExactly("task 3");
+
+        taskService.complete(tasks.getFirst().getId());
+
+        assertThat(RuntimeTestConfiguration.completedProcesses).contains(linkProcess.getId());
+        assertThat(RuntimeTestConfiguration.completedBpmnActivities)
+            .extracting(
+                org.activiti.api.process.model.BPMNActivity::getActivityName,
+                org.activiti.api.process.model.BPMNActivity::getActivityType,
+                org.activiti.api.process.model.BPMNActivity::getProcessInstanceId
+            )
+            .contains(
+                tuple("a", "throwEvent", linkProcess.getId()),
+                tuple("a", "intermediateCatchEvent", linkProcess.getId())
+            );
+    }
+
+    @Test
     public void should_createNewProcessInstanceWithoutRunningIt_whenCreateIsCalled() {
-        ProcessInstance categorizeProcess = processRuntime.create(ProcessPayloadBuilder.create()
-            .withProcessDefinitionKey(CATEGORIZE_PROCESS)
-            .withName("My process instance")
-            .withBusinessKey("my business key")
-            .build());
+        ProcessInstance categorizeProcess = processRuntime.create(
+            ProcessPayloadBuilder.create()
+                .withProcessDefinitionKey(CATEGORIZE_PROCESS)
+                .withName("My process instance")
+                .withBusinessKey("my business key")
+                .build()
+        );
 
         assertThat(RuntimeTestConfiguration.completedProcesses).doesNotContain(categorizeProcess.getId());
         assertThat(categorizeProcess).isNotNull();
@@ -288,66 +360,69 @@ public class ProcessRuntimeIT {
     public void should_startAnAlreadyCreatedProcess_when_startCreatedProcessIsCalled() {
         securityUtil.logInAs("garth");
 
-        ProcessInstance singleTaskProcessCreated = processRuntime
-            .create(ProcessPayloadBuilder.create()
-                .withProcessDefinitionKey(SINGLE_TASK_PROCESS)
-                .build());
+        ProcessInstance singleTaskProcessCreated = processRuntime.create(
+            ProcessPayloadBuilder.create().withProcessDefinitionKey(SINGLE_TASK_PROCESS).build()
+        );
 
         assertThat(singleTaskProcessCreated.getStatus()).isEqualTo(ProcessInstance.ProcessInstanceStatus.CREATED);
-        Page<Task> tasks = taskRuntime.tasks(PAGEABLE,
-            TaskPayloadBuilder
-                .tasks()
-                .withProcessInstanceId(singleTaskProcessCreated.getId())
-                .build());
+        Page<Task> tasks = taskRuntime.tasks(
+            PAGEABLE,
+            TaskPayloadBuilder.tasks().withProcessInstanceId(singleTaskProcessCreated.getId()).build()
+        );
         assertThat(tasks.getTotalItems()).isEqualTo(0);
 
         ProcessInstance singleTaskProcessStarted = processRuntime.startCreatedProcess(
             singleTaskProcessCreated.getId(),
-                ProcessPayloadBuilder.start()
-                    .build());
+            ProcessPayloadBuilder.start().build()
+        );
 
-        tasks = taskRuntime.tasks(PAGEABLE,
-            TaskPayloadBuilder
-                .tasks()
-                .withProcessInstanceId(singleTaskProcessCreated.getId())
-                .build());
+        tasks = taskRuntime.tasks(
+            PAGEABLE,
+            TaskPayloadBuilder.tasks().withProcessInstanceId(singleTaskProcessCreated.getId()).build()
+        );
         assertThat(tasks.getTotalItems()).isEqualTo(1);
-        assertThat(tasks.getContent().get(0).getName()).isEqualTo("my-task");
+        assertThat(tasks.getContent().getFirst().getName()).isEqualTo("my-task");
 
-        assertThat(RuntimeTestConfiguration.createdTasks).contains(tasks.getContent().get(0).getId());
+        assertThat(RuntimeTestConfiguration.createdTasks).contains(tasks.getContent().getFirst().getId());
         assertThat(singleTaskProcessStarted).isNotNull();
         assertThat(singleTaskProcessStarted.getStatus()).isEqualTo(ProcessInstance.ProcessInstanceStatus.RUNNING);
-        assertThat(processRuntime.processInstance(singleTaskProcessStarted.getId()).getStatus()).isEqualTo(ProcessInstance.ProcessInstanceStatus.RUNNING);
+        assertThat(processRuntime.processInstance(singleTaskProcessStarted.getId()).getStatus()).isEqualTo(
+            ProcessInstance.ProcessInstanceStatus.RUNNING
+        );
     }
 
     @Test
     public void should_throwAnError_when_ProcessInstanceIsAlreadyStartedOrCompleted() {
-        ProcessInstance categorizeProcess = processRuntime.start(ProcessPayloadBuilder.start()
-            .withProcessDefinitionKey(CATEGORIZE_HUMAN_PROCESS)
-            .withVariable("expectedKey",
-                true)
-            .withVariable("name","garth")
-            .withVariable("age",45)
-            .withBusinessKey("my business key")
-            .build());
+        ProcessInstance categorizeProcess = processRuntime.start(
+            ProcessPayloadBuilder.start()
+                .withProcessDefinitionKey(CATEGORIZE_HUMAN_PROCESS)
+                .withVariable("expectedKey", true)
+                .withVariable("name", "garth")
+                .withVariable("age", 45)
+                .withBusinessKey("my business key")
+                .build()
+        );
 
         assertThat(categorizeProcess.getStatus()).isEqualTo(ProcessInstance.ProcessInstanceStatus.RUNNING);
 
-        Throwable throwable = catchThrowable(() -> processRuntime.startCreatedProcess(categorizeProcess.getId(), new StartProcessPayload()));
+        Throwable throwable = catchThrowable(() ->
+            processRuntime.startCreatedProcess(categorizeProcess.getId(), new StartProcessPayload())
+        );
 
         assertThat(throwable)
             .isInstanceOf(ActivitiIllegalArgumentException.class)
-            .hasMessage("Process instance "+categorizeProcess.getId()+" has already been started");
+            .hasMessage("Process instance " + categorizeProcess.getId() + " has already been started");
     }
 
     @Test
     public void createProcessInstanceAndValidateDiscardPath() {
         //when
-        ProcessInstance categorizeProcess = processRuntime.start(ProcessPayloadBuilder.start()
+        ProcessInstance categorizeProcess = processRuntime.start(
+            ProcessPayloadBuilder.start()
                 .withProcessDefinitionKey(CATEGORIZE_PROCESS)
-                .withVariable("expectedKey",
-                        false)
-                .build());
+                .withVariable("expectedKey", false)
+                .build()
+        );
 
         assertThat(RuntimeTestConfiguration.completedProcesses).contains(categorizeProcess.getId());
 
@@ -393,110 +468,105 @@ public class ProcessRuntimeIT {
 
         //given
         // start a process with a business key to check filters
-        processRuntime.start(ProcessPayloadBuilder.start()
+        processRuntime.start(
+            ProcessPayloadBuilder.start()
                 .withProcessDefinitionKey(CATEGORIZE_HUMAN_PROCESS)
-                .withVariable("expectedKey",
-                        true)
-                .withVariable("name","garth")
-                .withVariable("age",45)
+                .withVariable("expectedKey", true)
+                .withVariable("name", "garth")
+                .withVariable("age", 45)
                 .withBusinessKey("my business key")
-                .build());
+                .build()
+        );
 
         //when
-        processInstancePage = processRuntime.processInstances(PAGEABLE,
-                ProcessPayloadBuilder
-                        .processInstances()
-                        .build());
+        processInstancePage = processRuntime.processInstances(
+            PAGEABLE,
+            ProcessPayloadBuilder.processInstances().build()
+        );
 
         assertThat(processInstancePage).isNotNull();
         assertThat(processInstancePage.getContent()).hasSize(1);
 
         // check for other key
-        processInstancePage = processRuntime.processInstances(PAGEABLE,
-                ProcessPayloadBuilder
-                        .processInstances().withBusinessKey("other key")
-                        .build());
+        processInstancePage = processRuntime.processInstances(
+            PAGEABLE,
+            ProcessPayloadBuilder.processInstances().withBusinessKey("other key").build()
+        );
 
         assertThat(processInstancePage).isNotNull();
         assertThat(processInstancePage.getContent()).hasSize(0);
 
-        processInstancePage = processRuntime.processInstances(PAGEABLE,
-                ProcessPayloadBuilder
-                        .processInstances().withBusinessKey("my business key")
-                        .build());
+        processInstancePage = processRuntime.processInstances(
+            PAGEABLE,
+            ProcessPayloadBuilder.processInstances().withBusinessKey("my business key").build()
+        );
 
         assertThat(processInstancePage).isNotNull();
         assertThat(processInstancePage.getContent()).hasSize(1);
 
-        processInstancePage = processRuntime.processInstances(PAGEABLE,
-                ProcessPayloadBuilder
-                        .processInstances()
-                        .suspended()
-                        .build());
+        processInstancePage = processRuntime.processInstances(
+            PAGEABLE,
+            ProcessPayloadBuilder.processInstances().suspended().build()
+        );
 
         assertThat(processInstancePage).isNotNull();
         assertThat(processInstancePage.getContent()).hasSize(0);
 
-        processInstancePage = processRuntime.processInstances(PAGEABLE,
-                ProcessPayloadBuilder
-                        .processInstances()
-                        .active()
-                        .build());
+        processInstancePage = processRuntime.processInstances(
+            PAGEABLE,
+            ProcessPayloadBuilder.processInstances().active().build()
+        );
 
         assertThat(processInstancePage).isNotNull();
         assertThat(processInstancePage.getContent()).hasSize(1);
 
-        processInstancePage = processRuntime.processInstances(PAGEABLE,
-                ProcessPayloadBuilder
-                        .processInstances()
-                        .active()
-                        .suspended()
-                        .build());
+        processInstancePage = processRuntime.processInstances(
+            PAGEABLE,
+            ProcessPayloadBuilder.processInstances().active().suspended().build()
+        );
 
         assertThat(processInstancePage).isNotNull();
         assertThat(processInstancePage.getContent()).hasSize(1);
 
-        ProcessInstance processInstance = processInstancePage.getContent().get(0);
+        ProcessInstance processInstance = processInstancePage.getContent().getFirst();
 
-        ProcessInstance suspendedProcessInstance = processRuntime.suspend(ProcessPayloadBuilder.suspend(processInstance));
+        ProcessInstance suspendedProcessInstance = processRuntime.suspend(
+            ProcessPayloadBuilder.suspend(processInstance)
+        );
 
         assertThat(suspendedProcessInstance).isNotNull();
         assertThat(suspendedProcessInstance.getStatus()).isEqualTo(ProcessInstance.ProcessInstanceStatus.SUSPENDED);
 
-        processInstancePage = processRuntime.processInstances(PAGEABLE,
-                ProcessPayloadBuilder
-                        .processInstances()
-                        .active()
-                        .build());
+        processInstancePage = processRuntime.processInstances(
+            PAGEABLE,
+            ProcessPayloadBuilder.processInstances().active().build()
+        );
 
         assertThat(processInstancePage).isNotNull();
         assertThat(processInstancePage.getContent()).hasSize(0);
 
-        processInstancePage = processRuntime.processInstances(PAGEABLE,
-                ProcessPayloadBuilder
-                        .processInstances()
-                        .suspended()
-                        .build());
+        processInstancePage = processRuntime.processInstances(
+            PAGEABLE,
+            ProcessPayloadBuilder.processInstances().suspended().build()
+        );
 
         assertThat(processInstancePage).isNotNull();
         assertThat(processInstancePage.getContent()).hasSize(1);
 
         processRuntime.resume(ProcessPayloadBuilder.resume(processInstance));
 
-        processInstancePage = processRuntime.processInstances(PAGEABLE,
-                ProcessPayloadBuilder
-                        .processInstances()
-                        .suspended()
-                        .build());
+        processInstancePage = processRuntime.processInstances(
+            PAGEABLE,
+            ProcessPayloadBuilder.processInstances().suspended().build()
+        );
 
         assertThat(processInstancePage).isNotNull();
         assertThat(processInstancePage.getContent()).hasSize(0);
 
-        processInstancePage = processRuntime.processInstances(PAGEABLE,
-                ProcessPayloadBuilder
-                        .processInstances()
-                        .active()
-                        .build());
+        processInstancePage = processRuntime.processInstances(
+            PAGEABLE,
+            ProcessPayloadBuilder.processInstances().active().build()
+        );
 
         assertThat(processInstancePage).isNotNull();
         assertThat(processInstancePage.getContent()).hasSize(1);
@@ -506,28 +576,29 @@ public class ProcessRuntimeIT {
         assertThat(getSingleProcessInstance.getStatus()).isEqualTo(ProcessInstance.ProcessInstanceStatus.RUNNING);
 
         // I need to clean up the Process Instances that I started because @WithMockUser cannot be used in @BeforeEach method
-        ProcessInstance deletedProcessInstance = processRuntime.delete(ProcessPayloadBuilder.delete(getSingleProcessInstance));
+        ProcessInstance deletedProcessInstance = processRuntime.delete(
+            ProcessPayloadBuilder.delete(getSingleProcessInstance)
+        );
         assertThat(deletedProcessInstance).isNotNull();
 
         processInstancePage = processRuntime.processInstances(PAGEABLE);
 
         assertThat(processInstancePage).isNotNull();
         assertThat(processInstancePage.getContent()).hasSize(0);
-
     }
-
 
     @Test
     public void should_deleteProcessInstanceAndEmmitEvents() {
         //given
-        ProcessInstance categorizeProcess = processRuntime.start(ProcessPayloadBuilder.start()
+        ProcessInstance categorizeProcess = processRuntime.start(
+            ProcessPayloadBuilder.start()
                 .withProcessDefinitionKey(CATEGORIZE_HUMAN_PROCESS)
-                .withVariable("expectedKey",
-                        true)
-                .withVariable("name","garth")
-                .withVariable("age",45)
+                .withVariable("expectedKey", true)
+                .withVariable("name", "garth")
+                .withVariable("age", 45)
                 .withBusinessKey("my business key")
-                .build());
+                .build()
+        );
 
         //when
         ProcessInstance deletedProcessInstance = processRuntime.delete(ProcessPayloadBuilder.delete(categorizeProcess));
@@ -535,7 +606,6 @@ public class ProcessRuntimeIT {
         //then
         assertThat(deletedProcessInstance).isNotNull();
         assertThat(deletedProcessInstance.getStatus()).isEqualTo(ProcessInstance.ProcessInstanceStatus.CANCELLED);
-
 
         //when
         Page<ProcessInstance> processInstancePage = processRuntime.processInstances(PAGEABLE);
@@ -548,60 +618,57 @@ public class ProcessRuntimeIT {
         //when
         Throwable throwable = catchThrowable(() -> processAdminRuntime.processInstance("fakeId"));
         //then
-        assertThat(throwable)
-                .isInstanceOf(AccessDeniedException.class);
+        assertThat(throwable).isInstanceOf(AccessDeniedException.class);
     }
 
-    @Test()
+    @Test
     public void userFailTest() {
         securityUtil.logInAs("admin");
         //when
         Throwable throwable = catchThrowable(() -> processRuntime.processDefinitions(PAGEABLE));
         //then
-        assertThat(throwable)
-                .isInstanceOf(AccessDeniedException.class);
+        assertThat(throwable).isInstanceOf(AccessDeniedException.class);
     }
 
     @Test
     public void updateProcessInstance() {
         ProcessRuntimeConfiguration configuration = processRuntime.configuration();
         assertThat(configuration).isNotNull();
-        Page<ProcessDefinition> processDefinitionPage = processRuntime.processDefinitions(
-            PAGEABLE);
+        Page<ProcessDefinition> processDefinitionPage = processRuntime.processDefinitions(PAGEABLE);
         assertThat(processDefinitionPage.getContent()).isNotNull();
-        assertThat(processDefinitionPage.getContent()).extracting(ProcessDefinition::getKey)
-                .contains(CATEGORIZE_HUMAN_PROCESS);
-
+        assertThat(processDefinitionPage.getContent())
+            .extracting(ProcessDefinition::getKey)
+            .contains(CATEGORIZE_HUMAN_PROCESS);
 
         // start a process with a business key to check filters
-        ProcessInstance categorizeProcess = processRuntime.start(ProcessPayloadBuilder.start()
+        ProcessInstance categorizeProcess = processRuntime.start(
+            ProcessPayloadBuilder.start()
                 .withProcessDefinitionKey(CATEGORIZE_HUMAN_PROCESS)
-                .withVariable("expectedKey",
-                        true)
+                .withVariable("expectedKey", true)
                 .withBusinessKey("my business key")
                 .withName("my process name")
-                .build());
+                .build()
+        );
 
         assertThat(categorizeProcess).isNotNull();
         assertThat(categorizeProcess.getStatus()).isEqualTo(ProcessInstance.ProcessInstanceStatus.RUNNING);
         assertThat(categorizeProcess.getName()).isEqualTo("my process name");
         //assertThat(categorizeProcess.getDescription()).isNull();
 
-
         //
         //To do: currently Description is not possible to update
         //
 
-       // update a process
+        // update a process
         Page<ProcessInstance> processInstancePage = processRuntime.processInstances(PAGEABLE);
 
-        ProcessInstance processInstance = processInstancePage.getContent().get(0);
+        ProcessInstance processInstance = processInstancePage.getContent().getFirst();
 
         UpdateProcessPayload updateProcessPayload = ProcessPayloadBuilder.update()
-                .withProcessInstanceId(processInstance.getId())
-                .withBusinessKey(processInstance.getBusinessKey() + " UPDATED")
-                .withName(processInstance.getName() + " UPDATED")
-                .build();
+            .withProcessInstanceId(processInstance.getId())
+            .withBusinessKey(processInstance.getBusinessKey() + " UPDATED")
+            .withName(processInstance.getName() + " UPDATED")
+            .build();
 
         ProcessInstance updatedProcessInstance = processRuntime.update(updateProcessPayload);
 
@@ -612,12 +679,10 @@ public class ProcessRuntimeIT {
         assertThat(processInstancePage).isNotNull();
         assertThat(processInstancePage.getContent()).hasSize(1);
 
-        processInstance = processInstancePage.getContent().get(0);
-
+        processInstance = processInstancePage.getContent().getFirst();
 
         assertThat(processInstance.getName()).isEqualTo("my process name UPDATED");
         assertThat(processInstance.getBusinessKey()).isEqualTo("my business key UPDATED");
-
 
         // delete a process to avoid possible problems with other tests
 
@@ -625,45 +690,42 @@ public class ProcessRuntimeIT {
 
         assertThat(deletedProcessInstance).isNotNull();
         assertThat(deletedProcessInstance.getStatus()).isEqualTo(ProcessInstance.ProcessInstanceStatus.CANCELLED);
-
     }
 
     @Test
     public void updateProcessInstanceAdmin() {
         securityUtil.logInAs("admin");
 
-        Page<ProcessDefinition> processDefinitionPage = processAdminRuntime.processDefinitions(Pageable.of(0,
-                50));
+        Page<ProcessDefinition> processDefinitionPage = processAdminRuntime.processDefinitions(Pageable.of(0, 200));
         assertThat(processDefinitionPage.getContent()).isNotNull();
-        assertThat(processDefinitionPage.getContent()).extracting(ProcessDefinition::getKey)
-                .contains(CATEGORIZE_HUMAN_PROCESS);
-
+        assertThat(processDefinitionPage.getContent())
+            .extracting(ProcessDefinition::getKey)
+            .contains(CATEGORIZE_HUMAN_PROCESS);
 
         // start a process with a business key to check filters
-        ProcessInstance categorizeProcess = processAdminRuntime.start(ProcessPayloadBuilder.start()
+        ProcessInstance categorizeProcess = processAdminRuntime.start(
+            ProcessPayloadBuilder.start()
                 .withProcessDefinitionKey(CATEGORIZE_HUMAN_PROCESS)
-                .withVariable("expectedKey",
-                        true)
+                .withVariable("expectedKey", true)
                 .withBusinessKey("my business key")
                 .withName("my process name")
-                .build());
+                .build()
+        );
 
         assertThat(categorizeProcess).isNotNull();
         assertThat(categorizeProcess.getStatus()).isEqualTo(ProcessInstance.ProcessInstanceStatus.RUNNING);
         assertThat(categorizeProcess.getName()).isEqualTo("my process name");
 
-
         // update a process
-        Page<ProcessInstance> processInstancePage = processAdminRuntime.processInstances(
-            PAGEABLE);
+        Page<ProcessInstance> processInstancePage = processAdminRuntime.processInstances(PAGEABLE);
 
-        ProcessInstance processInstance = processInstancePage.getContent().get(0);
+        ProcessInstance processInstance = processInstancePage.getContent().getFirst();
 
         UpdateProcessPayload updateProcessPayload = ProcessPayloadBuilder.update()
-                .withProcessInstanceId(processInstance.getId())
-                .withBusinessKey(processInstance.getBusinessKey() + " UPDATED")
-                .withName(processInstance.getName() + " UPDATED")
-                .build();
+            .withProcessInstanceId(processInstance.getId())
+            .withBusinessKey(processInstance.getBusinessKey() + " UPDATED")
+            .withName(processInstance.getName() + " UPDATED")
+            .build();
 
         ProcessInstance updatedProcessInstance = processAdminRuntime.update(updateProcessPayload);
 
@@ -674,97 +736,96 @@ public class ProcessRuntimeIT {
         assertThat(processInstancePage).isNotNull();
         assertThat(processInstancePage.getContent()).hasSize(1);
 
-        processInstance = processInstancePage.getContent().get(0);
-
+        processInstance = processInstancePage.getContent().getFirst();
 
         assertThat(processInstance.getName()).isEqualTo("my process name UPDATED");
         assertThat(processInstance.getBusinessKey()).isEqualTo("my business key UPDATED");
 
-
         // delete a process to avoid possible problems with other tests
 
-        ProcessInstance deletedProcessInstance = processAdminRuntime.delete(ProcessPayloadBuilder.delete(categorizeProcess));
+        ProcessInstance deletedProcessInstance = processAdminRuntime.delete(
+            ProcessPayloadBuilder.delete(categorizeProcess)
+        );
 
         assertThat(deletedProcessInstance).isNotNull();
         assertThat(deletedProcessInstance.getStatus()).isEqualTo(ProcessInstance.ProcessInstanceStatus.CANCELLED);
-
     }
 
     @Test
     public void getSubprocesses() {
         Page<ProcessInstance> processInstancePage;
-        ProcessInstance parentProcess,subProcess;
+        ProcessInstance parentProcess, subProcess;
 
         //given
         // start a process with a business key to check filters
-        parentProcess=processRuntime.start(ProcessPayloadBuilder.start()
+        parentProcess = processRuntime.start(
+            ProcessPayloadBuilder.start()
                 .withProcessDefinitionKey(SUPER_PROCESS)
                 .withBusinessKey("my superprocess key")
-                .build());
+                .build()
+        );
 
         //when
-        processInstancePage = processRuntime.processInstances(PAGEABLE,
-                ProcessPayloadBuilder
-                        .processInstances()
-                        .build());
+        processInstancePage = processRuntime.processInstances(
+            PAGEABLE,
+            ProcessPayloadBuilder.processInstances().build()
+        );
 
         //Check that we have parent process and subprocess
         assertThat(processInstancePage).isNotNull();
         assertThat(processInstancePage.getContent()).hasSize(2);
 
-        assertThat( processInstancePage.getContent().get(0).getProcessDefinitionKey()).isEqualTo(SUPER_PROCESS);
-        assertThat( processInstancePage.getContent().get(1).getProcessDefinitionKey()).isEqualTo(SUB_PROCESS);
-
+        assertThat(processInstancePage.getContent().getFirst().getProcessDefinitionKey()).isEqualTo(SUPER_PROCESS);
+        assertThat(processInstancePage.getContent().get(1).getProcessDefinitionKey()).isEqualTo(SUB_PROCESS);
 
         //Check that parentProcess has 1 subprocess
-        processInstancePage = processRuntime.processInstances(PAGEABLE,
-                                                                          ProcessPayloadBuilder
-                                                                                  .subprocesses(parentProcess.getId()));
-
+        processInstancePage = processRuntime.processInstances(
+            PAGEABLE,
+            ProcessPayloadBuilder.subprocesses(parentProcess.getId())
+        );
 
         assertThat(processInstancePage).isNotNull();
         assertThat(processInstancePage.getContent()).hasSize(1);
 
-        subProcess=processInstancePage.getContent().get(0);
+        subProcess = processInstancePage.getContent().getFirst();
 
         assertThat(subProcess.getProcessDefinitionKey()).isEqualTo(SUB_PROCESS);
         assertThat(subProcess.getParentId()).isEqualTo(parentProcess.getId());
         assertThat(subProcess.getProcessDefinitionVersion()).isEqualTo(1);
 
-
         processRuntime.delete(ProcessPayloadBuilder.delete(subProcess));
         processRuntime.delete(ProcessPayloadBuilder.delete(parentProcess));
-
     }
 
     @Test
     public void should_startProcessViaSignal() {
         // when
         SignalPayload signalPayload = ProcessPayloadBuilder.signal()
-        .withName("The Signal")
+            .withName("The Signal")
             .withVariable("signalVar", "from signal")
             .build();
         processRuntimeMock.signal(signalPayload);
 
-        Page<ProcessInstance> processInstancePage = processRuntimeMock.processInstances(
-            PAGEABLE);
+        Page<ProcessInstance> processInstancePage = processRuntimeMock.processInstances(PAGEABLE);
 
         // then
         assertThat(processInstancePage).isNotNull();
         assertThat(processInstancePage.getContent()).hasSize(1);
-        assertThat(processInstancePage.getContent().get(0).getProcessDefinitionKey()).isEqualTo("processWithSignalStart1");
+        assertThat(processInstancePage.getContent().getFirst().getProcessDefinitionKey()).isEqualTo(
+            "processWithSignalStart1"
+        );
 
         verify(eventPublisher).publishEvent(signalPayload);
 
         //when
         List<VariableInstance> variables = processRuntime.variables(
-            ProcessPayloadBuilder.variables()
-                .withProcessInstance(processInstancePage.getContent().get(0)).build());
+            ProcessPayloadBuilder.variables().withProcessInstance(processInstancePage.getContent().getFirst()).build()
+        );
         assertThat(variables)
             .extracting(VariableInstance::getName, VariableInstance::getValue)
             .containsExactly(tuple("signalVar", "from signal"));
 
-        processRuntimeMock.delete(ProcessPayloadBuilder.delete(processInstancePage.getContent().get(0).getId()));
+        processRuntimeMock.delete(ProcessPayloadBuilder.delete(processInstancePage.getContent().getFirst().getId()));
     }
 
     @Test
@@ -774,43 +835,45 @@ public class ProcessRuntimeIT {
         processAdminRuntimeMock.signal(signalPayload);
         verify(eventPublisher).publishEvent(signalPayload);
 
-        Page<ProcessInstance> processInstancePage = processAdminRuntimeMock.processInstances(
-            PAGEABLE);
+        Page<ProcessInstance> processInstancePage = processAdminRuntimeMock.processInstances(PAGEABLE);
 
         // then
         assertThat(processInstancePage).isNotNull();
         assertThat(processInstancePage.getContent()).hasSize(1);
-        assertThat(processInstancePage.getContent().get(0).getProcessDefinitionKey()).isEqualTo("processWithSignalStart1");
+        assertThat(processInstancePage.getContent().getFirst().getProcessDefinitionKey()).isEqualTo(
+            "processWithSignalStart1"
+        );
 
-        processAdminRuntimeMock.delete(ProcessPayloadBuilder.delete(processInstancePage.getContent().get(0).getId()));
+        processAdminRuntimeMock.delete(ProcessPayloadBuilder.delete(processInstancePage.getContent().getFirst().getId()));
     }
 
     @Test
-    public void should_processInstanceAlwaysHaveAppVersion(){
-        ProcessInstance processInstance = processRuntime.start(ProcessPayloadBuilder.start()
-                                                                         .withProcessDefinitionKey(SUPER_PROCESS)
-                                                                         .build());
+    public void should_processInstanceAlwaysHaveAppVersion() {
+        ProcessInstance processInstance = processRuntime.start(
+            ProcessPayloadBuilder.start().withProcessDefinitionKey(SUPER_PROCESS).build()
+        );
         assertThat(processInstance.getAppVersion()).isEqualTo("1");
     }
 
     @Test
-    public void should_processDefinitionAlwaysHaveAppVersion(){
-        Page<ProcessDefinition> processDefinitionPage = processRuntime.processDefinitions(
-            PAGEABLE);
+    public void should_processDefinitionAlwaysHaveAppVersion() {
+        Page<ProcessDefinition> processDefinitionPage = processRuntime.processDefinitions(PAGEABLE);
         assertThat(processDefinitionPage.getContent()).isNotEmpty();
 
-        List<ProcessDefinition> processDefinitions = processDefinitionPage.getContent().stream()
-                .filter(c -> c.getKey().equals(SUPER_PROCESS))
-                .collect(Collectors.toList());
+        List<ProcessDefinition> processDefinitions = processDefinitionPage
+            .getContent()
+            .stream()
+            .filter(c -> c.getKey().equals(SUPER_PROCESS))
+            .collect(Collectors.toList());
         assertThat(processDefinitions).hasSize(1);
 
-        ProcessDefinition result = processDefinitions.get(0);
+        ProcessDefinition result = processDefinitions.getFirst();
 
         assertThat(result.getAppVersion()).isEqualTo("1");
     }
 
     @Test
-    public void should_selectLatestDeployment(){
+    public void should_selectLatestDeployment() {
         Deployment deployment = processRuntime.selectLatestDeployment();
 
         assertThat(deployment.getVersion()).isEqualTo(1);
@@ -818,15 +881,18 @@ public class ProcessRuntimeIT {
         assertThat(deployment.getName()).isEqualTo("SpringAutoDeployment");
     }
 
-
     @Test
     public void should_OnlyProcessDefinitionsFromLatestVersionRetrieved() {
         Deployment deployment = processRuntime.selectLatestDeployment();
 
-        Page<ProcessDefinition> processDefinitionPage = processRuntime.processDefinitions(
-            PAGEABLE);
+        Page<ProcessDefinition> processDefinitionPage = processRuntime.processDefinitions(PAGEABLE);
 
-        assertThat(processDefinitionPage.getContent().stream().filter(c -> c.getKey().equals(SUPER_PROCESS)))
+        assertThat(
+            processDefinitionPage
+                .getContent()
+                .stream()
+                .filter(c -> c.getKey().equals(SUPER_PROCESS))
+        )
             .extracting(ProcessDefinition::getAppVersion)
             .containsOnly(deployment.getVersion().toString());
     }
@@ -838,24 +904,24 @@ public class ProcessRuntimeIT {
         double doubleValue = 2.0;
         LocalDateTime localDateTime = LocalDateTime.parse("2020-08-12T12:00:00");
         LocalDate localDate = LocalDate.parse("2020-08-10");
-        ProcessInstance processInstance = processRuntime.start(ProcessPayloadBuilder.start()
-            .withProcessDefinitionKey(CATEGORIZE_HUMAN_PROCESS)
-            .withVariable("bigDecimalVar", bigDecimalValue)
-            .withVariable("doubleVar", doubleValue)
-            .withVariable("localDateTimeVar", localDateTime)
-            .withVariable("localDateVar", localDate)
-            .build());
+        ProcessInstance processInstance = processRuntime.start(
+            ProcessPayloadBuilder.start()
+                .withProcessDefinitionKey(CATEGORIZE_HUMAN_PROCESS)
+                .withVariable("bigDecimalVar", bigDecimalValue)
+                .withVariable("doubleVar", doubleValue)
+                .withVariable("localDateTimeVar", localDateTime)
+                .withVariable("localDateVar", localDate)
+                .build()
+        );
 
         //when
         List<VariableInstance> variables = processRuntime.variables(
-            ProcessPayloadBuilder.variables().withProcessInstance(processInstance).build());
+            ProcessPayloadBuilder.variables().withProcessInstance(processInstance).build()
+        );
 
         //then
         assertThat(variables)
-            .extracting(
-                VariableInstance::getName,
-                VariableInstance::getValue,
-                VariableInstance::getType)
+            .extracting(VariableInstance::getName, VariableInstance::getValue, VariableInstance::getType)
             .contains(
                 tuple("bigDecimalVar", bigDecimalValue, "bigdecimal"),
                 tuple("doubleVar", doubleValue, "double"),
@@ -870,10 +936,14 @@ public class ProcessRuntimeIT {
 
         securityUtil.logInAs("admin");
 
-        Page<ProcessDefinition> processDefinitionPage = processAdminRuntime.processDefinitions(
-            PAGEABLE);
+        Page<ProcessDefinition> processDefinitionPage = processAdminRuntime.processDefinitions(PAGEABLE);
 
-        assertThat(processDefinitionPage.getContent().stream().filter(c -> c.getKey().equals(SUPER_PROCESS)))
+        assertThat(
+            processDefinitionPage
+                .getContent()
+                .stream()
+                .filter(c -> c.getKey().equals(SUPER_PROCESS))
+        )
             .extracting(ProcessDefinition::getAppVersion)
             .containsOnly(deployment.getVersion().toString());
     }
@@ -881,15 +951,13 @@ public class ProcessRuntimeIT {
     @Test
     public void should_returnProcessesToInitiator() {
         //given
-        processRuntime.start(ProcessPayloadBuilder.start()
-            .withProcessDefinitionKey(CATEGORIZE_HUMAN_PROCESS)
-            .build());
+        processRuntime.start(ProcessPayloadBuilder.start().withProcessDefinitionKey(CATEGORIZE_HUMAN_PROCESS).build());
 
         //when
-        Page<ProcessInstance>  processInstancePage = processRuntime.processInstances(PAGEABLE,
-            ProcessPayloadBuilder
-                .processInstances()
-                .build());
+        Page<ProcessInstance> processInstancePage = processRuntime.processInstances(
+            PAGEABLE,
+            ProcessPayloadBuilder.processInstances().build()
+        );
 
         assertThat(processInstancePage).isNotNull();
         assertThat(processInstancePage.getContent()).hasSize(1);
@@ -898,17 +966,15 @@ public class ProcessRuntimeIT {
     @Test
     public void should_not_returnProcessesToNonInitiatorAndNotTaskInvolvedUser() {
         //given
-        processRuntime.start(ProcessPayloadBuilder.start()
-            .withProcessDefinitionKey(CATEGORIZE_HUMAN_PROCESS)
-            .build());
+        processRuntime.start(ProcessPayloadBuilder.start().withProcessDefinitionKey(CATEGORIZE_HUMAN_PROCESS).build());
 
         securityUtil.logInAs("garth");
 
         //when
-        Page<ProcessInstance> processInstancePage = processRuntime.processInstances(PAGEABLE,
-            ProcessPayloadBuilder
-                .processInstances()
-                .build());
+        Page<ProcessInstance> processInstancePage = processRuntime.processInstances(
+            PAGEABLE,
+            ProcessPayloadBuilder.processInstances().build()
+        );
 
         assertThat(processInstancePage).isNotNull();
         assertThat(processInstancePage.getContent()).isEmpty();
@@ -917,9 +983,9 @@ public class ProcessRuntimeIT {
     @Test
     public void should_returnProcessToTaskAssignee() {
         //given
-        ProcessInstance processInstance = processRuntime.start(ProcessPayloadBuilder.start()
-            .withProcessDefinitionKey(SINGLE_TASK_PROCESS)
-            .build());
+        ProcessInstance processInstance = processRuntime.start(
+            ProcessPayloadBuilder.start().withProcessDefinitionKey(SINGLE_TASK_PROCESS).build()
+        );
 
         securityUtil.logInAs("garth");
 
@@ -932,9 +998,9 @@ public class ProcessRuntimeIT {
     @Test
     public void should_returnProcessToTaskCandidate() {
         //given
-        ProcessInstance processInstance = processRuntime.start(ProcessPayloadBuilder.start()
-            .withProcessDefinitionKey(TWO_TASKS_PROCESS)
-            .build());
+        ProcessInstance processInstance = processRuntime.start(
+            ProcessPayloadBuilder.start().withProcessDefinitionKey(TWO_TASKS_PROCESS).build()
+        );
 
         securityUtil.logInAs("garth");
 
@@ -947,22 +1013,23 @@ public class ProcessRuntimeIT {
     @Test
     public void should_ForbidCancelingProcessInstanceUsingTaskInvolvedUser() {
         //given
-        ProcessInstance processInstance = processRuntime.start(ProcessPayloadBuilder.start()
-            .withProcessDefinitionKey(SINGLE_TASK_PROCESS)
-            .build());
+        ProcessInstance processInstance = processRuntime.start(
+            ProcessPayloadBuilder.start().withProcessDefinitionKey(SINGLE_TASK_PROCESS).build()
+        );
 
         securityUtil.logInAs("garth");
 
-        assertThatThrownBy(() -> { processRuntime.delete(ProcessPayloadBuilder.delete(processInstance)); })
-            .isInstanceOf(ActivitiForbiddenException.class);
+        assertThatThrownBy(() -> {
+            processRuntime.delete(ProcessPayloadBuilder.delete(processInstance));
+        }).isInstanceOf(ActivitiForbiddenException.class);
     }
 
     @Test
     public void should_CancelProcessInstanceUsingInitiatorUser() {
         //given
-        ProcessInstance processInstance = processRuntime.start(ProcessPayloadBuilder.start()
-            .withProcessDefinitionKey(SINGLE_TASK_PROCESS)
-            .build());
+        ProcessInstance processInstance = processRuntime.start(
+            ProcessPayloadBuilder.start().withProcessDefinitionKey(SINGLE_TASK_PROCESS).build()
+        );
 
         ProcessInstance deletedProcessInstance = processRuntime.delete(ProcessPayloadBuilder.delete(processInstance));
 
@@ -973,9 +1040,9 @@ public class ProcessRuntimeIT {
     @Test
     public void should_returnProcessesToTaskCandidates() {
         //given
-        ProcessInstance processInstance = processRuntime.start(ProcessPayloadBuilder.start()
-            .withProcessDefinitionKey(TWO_TASKS_PROCESS)
-            .build());
+        ProcessInstance processInstance = processRuntime.start(
+            ProcessPayloadBuilder.start().withProcessDefinitionKey(TWO_TASKS_PROCESS).build()
+        );
 
         securityUtil.logInAs("garth");
 
@@ -985,15 +1052,15 @@ public class ProcessRuntimeIT {
         //then
         assertThat(processInstancePage).isNotNull();
         assertThat(processInstancePage.getContent()).hasSize(1);
-        assertThat(processInstancePage.getContent().get(0).getId()).isEqualTo(processInstance.getId());
+        assertThat(processInstancePage.getContent().getFirst().getId()).isEqualTo(processInstance.getId());
     }
 
     @Test
     public void should_returnProcessesToTaskAssignees() {
         //given
-        ProcessInstance processInstance = processRuntime.start(ProcessPayloadBuilder.start()
-            .withProcessDefinitionKey(SINGLE_TASK_PROCESS)
-            .build());
+        ProcessInstance processInstance = processRuntime.start(
+            ProcessPayloadBuilder.start().withProcessDefinitionKey(SINGLE_TASK_PROCESS).build()
+        );
 
         securityUtil.logInAs("garth");
 
@@ -1003,16 +1070,29 @@ public class ProcessRuntimeIT {
         //then
         assertThat(processInstancePage).isNotNull();
         assertThat(processInstancePage.getContent()).hasSize(1);
-        assertThat(processInstancePage.getContent().get(0).getId()).isEqualTo(processInstance.getId());
+        assertThat(processInstancePage.getContent().getFirst().getId()).isEqualTo(processInstance.getId());
     }
 
     @Test
     public void should_returnProcessesWhenUserIsApplicationManager() {
         securityUtil.logInAs("manager");
 
-        Page<ProcessInstance> processInstancePage = processAdminRuntime.processInstances(Pageable.of(0,
-            50));
+        Page<ProcessInstance> processInstancePage = processAdminRuntime.processInstances(Pageable.of(0, 200));
 
         assertThat(processInstancePage).isNotNull();
+    }
+
+    @Test
+    public void should_ReturnProcessDefinitionsFromLatestVersionAndNotStartable() {
+
+        Page<ProcessDefinition> processDefinitionPage = processRuntime.processDefinitions(PAGEABLE,  List.of("noUserStartableProcesses"));
+
+        assertThat(
+            processDefinitionPage
+                .getContent()
+                .stream()
+                .filter(c -> c.getKey().equals(UNSTARTABLE_PROCESS))
+        )
+            .isNotEmpty();
     }
 }
